--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Footer from '../components/Footer.astro'
 
     <main>
       <h1>¡Hola! Soy Renato</h1>
-      <p>Desarrollador web especializado en si.</p>
+      <p>Desarrollador web especializado en desarrollo de interfaces.</p>
     </main>
 
     <Footer />
