--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,3 +1,6 @@
+---
+// no se necesita lógica, pero se abre y se cierra correctamente
+---
 
 <nav class="bg-gray-900 text-white p-4 flex justify-between items-center">
   <h1 class="text-xl font-bold">Mi Portafolio</h1>
